Add global OME cmake configuration

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -43,7 +43,9 @@ enable_language(CXX)
 list(APPEND CMAKE_MODULE_PATH
      "${CMAKE_CURRENT_LIST_DIR}/cmake")
 
-project(ome-common)
+project(ome-common
+        VERSION 5.2.0
+        LANGUAGES CXX)
 message(STATUS "Configuring ${CMAKE_PROJECT_NAME}")
 
 include(cmake/Version.cmake)
@@ -52,8 +54,7 @@ if("${PROJECT_SOURCE_DIR}" STREQUAL "${PROJECT_BINARY_DIR}")
   message(FATAL_ERROR "In-tree builds are not supported; please run cmake from a separate build directory.")
 endif("${PROJECT_SOURCE_DIR}" STREQUAL "${PROJECT_BINARY_DIR}")
 
-enable_language(CXX)
-  set(BUILD_SHARED_LIBS_DEFAULT ON)
+set(BUILD_SHARED_LIBS_DEFAULT ON)
 if(MSVC)
   set(BUILD_SHARED_LIBS_DEFAULT OFF)
 endif()
