OMEConfig: Correct quote escaping

--- a/lib/ome/global/OMEConfig.cmake.in
+++ b/lib/ome/global/OMEConfig.cmake.in
@@ -31,9 +31,9 @@ foreach(module ${OME_FIND_COMPONENTS})
     ${_OME_FIND_PARTS_REQUIRED})
   if (NOT OME${module}_FOUND)
     if (OME_FIND_REQUIRED_${module})
-      set(_OME_NOTFOUND_MESSAGE "${_OME_NOTFOUND_MESSAGE}Failed to find OME component "${module}" config file at "${_ome_install_prefix}/OME${module}/OME${module}Config.cmake"n")
+      set(_OME_NOTFOUND_MESSAGE "${_OME_NOTFOUND_MESSAGE}Failed to find OME component \"${module}\" config file at \"${_ome_install_prefix}/OME${module}/OME${module}Config.cmake\"")
     elseif(NOT OME_FIND_QUIETLY)
-      message(WARNING "Failed to find OME component "${module}" config file at "${_ome_install_prefix}/OME${module}/OME${module}Config.cmake"")
+      message(WARNING "Failed to find OME component \"${module}\" config file at \"${_ome_install_prefix}/OME${module}/OME${module}Config.cmake\"")
     endif()
   endif()
 endforeach()
