cmake: Add Xalan-C checks

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -68,6 +68,7 @@ include(BoostChecks)
 include(RegexChecks)
 include(ThreadChecks)
 include(XercesChecks)
+include(XalanChecks)
 include(GTest)
 include(Doxygen)
 include(HeaderTest)
