ome-common: Add xsl::Platform
- This class is a similar wrapper to xml::Platform; it wraps the
  initialisation and cleanup of the library, and it also has a
  mutex for thread-safety.
- ome-common links with Xalan-C.
- ome-common exports the Xalan-C dependency in its cmake
  configuration.

--- a/lib/ome/common/CMakeLists.txt
+++ b/lib/ome/common/CMakeLists.txt
@@ -79,6 +79,9 @@ set(ome_common_units_static_headers
     xml/Platform.h
     xml/String.h)
 
+  set(ome_common_xsl_static_headers
+    xsl/Platform.h)
+
 set(ome_common_xml_dom_static_headers
     xml/dom/Base.h
     xml/dom/Document.h
@@ -95,6 +98,7 @@ set(ome_common_headers
     ${ome_common_static_headers}
     ${ome_common_xml_static_headers}
     ${ome_common_xml_dom_static_headers}
+    ${ome_common_xsl_static_headers}
     ${ome_common_generated_headers})
 
 set(ome_common_sources
@@ -105,7 +109,8 @@ set(ome_common_sources
     xml/Platform.cpp
     xml/dom/Document.cpp
     xml/dom/NamedNodeMap.cpp
-    xml/dom/NodeList.cpp)
+    xml/dom/NodeList.cpp
+    xsl/Platform.cpp)
 
 add_library(ome-common ${ome_common_sources} ${ome_common_headers})
 
@@ -123,6 +128,7 @@ target_link_libraries(ome-common
                       Boost::filesystem
                       Boost::system
                       XercesC::XercesC
+                      XalanC::XalanC
                       PRIVATE
                       ${LibDl_LIBRARIES})
 
@@ -155,6 +161,8 @@ install(FILES ${ome_common_xml_static_headers}
         DESTINATION ${ome_common_includedir}/xml)
 install(FILES ${ome_common_xml_dom_static_headers}
         DESTINATION ${ome_common_includedir}/xml/dom)
+install(FILES ${ome_common_xsl_static_headers}
+        DESTINATION ${ome_common_includedir}/xsl)
 
 # Dump header list for testing
 header_include_list_write(ome_common_static_headers ome_common_generated_headers ome/common ${PROJECT_BINARY_DIR}/test/ome-common)
