module: Refactor to allow third-party module registration
With bioformats split into multiple repositories, the existing
hard-coded module path list was not able to store paths for
the split components.

- Rename the internalpath class to Module and make public
- Allow RAII module registration with the RegisterModule class;
  simply instantiate in your library to register dynamically
- Move the library path introspection into module.h, but unused
  unless the OME_COMMON_MODULE_INTROSPECTION define is set; this
  is to allow normal use but expose it only when specifically
  required for third-party module registration.  That is to say,
  it's not part of the public interface--other users can
  use this privately
- Add caching of path search results, so the complex checking
  is only performed once per path
- Drop OME-XML- and Bio-Formats-specific paths; these will now
  be provided by these libraries directly using the above
  registration mechanism

--- a/lib/ome/common/config.h.in
+++ b/lib/ome/common/config.h.in
@@ -64,6 +64,7 @@
 #cmakedefine OME_HAVE_NOEXCEPT 1
 #cmakedefine OME_HAVE_SNPRINTF 1
 #cmakedefine OME_VARIANT_LIMIT 1
+#cmakedefine OME_HAVE_DLADDR 1
 
 #ifndef OME_VARIANT_LIMIT
 #  ifndef BOOST_MPL_CFG_NO_PREPROCESSED_HEADERS
