common: module: Relative and absolute path portability fixes
- Factor out hardcoded shared library path, and root path environment
  variable into per-path properties; also add a per-path module path
  environment variable.
- Add missing relocatable-install option, and correct the name of
  the install path macro.
- Update unit tests to test the above changes.

--- a/lib/ome/common/config-internal.h.in
+++ b/lib/ome/common/config-internal.h.in
@@ -39,7 +39,7 @@
 #ifndef OME_COMMON_CONFIG_INTERNAL_H
 #define OME_COMMON_CONFIG_INTERNAL_H
 
-#define OME_COMMON_INSTALL_PREFIX "@CMAKE_INSTALL_PREFIX@"
+#define OME_COMMON_INSTALL_PREFIX "@OME_COMMON_INSTALL_PREFIX@"
 
 #define OME_COMMON_INSTALL_BINDIR "@CMAKE_INSTALL_BINDIR@"
 #define OME_COMMON_INSTALL_SBINDIR "@CMAKE_INSTALL_SBINDIR@"
@@ -72,5 +72,11 @@
 #define OME_COMMON_INSTALL_FULL_LOCALEDIR "@CMAKE_INSTALL_FULL_LOCALEDIR@"
 #define OME_COMMON_INSTALL_FULL_MANDIR "@CMAKE_INSTALL_FULL_MANDIR@"
 #define OME_COMMON_INSTALL_FULL_DOCDIR "@CMAKE_INSTALL_FULL_DOCDIR@"
+
+#ifdef _MSC_VER
+#  define OME_COMMON_SHLIBDIR OME_COMMON_INSTALL_BINDIR
+#else
+#  define OME_COMMON_SHLIBDIR OME_COMMON_INSTALL_LIBDIR
+#endif
 
 #endif // OME_COMMON_CONFIG_INTERNAL_H
