xerces: String: Correct UTF-8 to UTF-16 transcoding
This was erroneously transcoding to and from the locale
codeset rather than UTF-8, which broke the unit tests
for OME-XML on Windows, and presumably also for Unix
with non-UTF-8 locales.

--- a/lib/ome/common/CMakeLists.txt
+++ b/lib/ome/common/CMakeLists.txt
@@ -113,6 +113,7 @@ set(ome_common_sources
     xml/EntityResolver.cpp
     xml/ErrorReporter.cpp
     xml/Platform.cpp
+    xml/String.cpp
     xml/dom/Document.cpp
     xml/dom/NamedNodeMap.cpp
     xml/dom/NodeList.cpp
