cmake: Remove global OME configuration script
Users of the libraries will need to use the individual
configuration scripts for each component, i.e. OMECommon,
OMEXML, OMEFiles, OMEQtWidgets rather than "OME".  This
is because they don't have a common version, so having
a central configuration with a single version number
doesn't really work, and wasn't used in practice anyway.

--- a/lib/ome/common/OMECommonConfig.cmake.in
+++ b/lib/ome/common/OMECommonConfig.cmake.in
@@ -1,3 +1,5 @@
+@PACKAGE_INIT@
+
 include(CMakeFindDependencyMacro)
 find_dependency(OMECompat REQUIRED)
 find_dependency(Boost 1.46 REQUIRED
@@ -9,4 +11,4 @@ find_dependency(XalanC 1.10 REQUIRED)
 include("${CMAKE_CURRENT_LIST_DIR}/OMECommonInternal.cmake")
 
 add_library(OME::Common INTERFACE IMPORTED)
-set_target_properties(OME::Common PROPERTIES INTERFACE_LINK_LIBRARIES ome-common)
+set_target_properties(OME::Common PROPERTIES INTERFACE_LINK_LIBRARIES ome_common_ome-common)
