--- a/lib/ome/compat/OMECompatConfig.cmake.in
+++ b/lib/ome/compat/OMECompatConfig.cmake.in
@@ -1,3 +1,5 @@
+@PACKAGE_INIT@
+
 include(CMakeFindDependencyMacro)
 find_dependency(Boost 1.46 REQUIRED COMPONENTS regex)
 find_dependency(XercesC 3.0.0 REQUIRED)
@@ -5,4 +7,4 @@ find_dependency(XercesC 3.0.0 REQUIRED)
 include("${CMAKE_CURRENT_LIST_DIR}/OMECompatInternal.cmake")
 
 add_library(OME::Compat INTERFACE IMPORTED)
-set_target_properties(OME::Compat PROPERTIES INTERFACE_LINK_LIBRARIES ome-compat)
+set_target_properties(OME::Compat PROPERTIES INTERFACE_LINK_LIBRARIES ome_compat_ome-compat)
