Restore and deprecate compatibility headers for transition

--- a/lib/ome/compat/CMakeLists.txt
+++ b/lib/ome/compat/CMakeLists.txt
@@ -35,8 +35,11 @@
 # #L%
 
 set(ome_compat_headers
+    array.h
+    cstdint.h
     memory.h
-    regex.h)
+    regex.h
+    tuple.h)
 
 add_library(ome-compat INTERFACE)
 
