Use C++11 <thread> and <mutex>

--- a/test/ome-common/CMakeLists.txt
+++ b/test/ome-common/CMakeLists.txt
@@ -77,7 +77,7 @@ if(BUILD_TESTS)
   ome_add_test(ome-common/mstream mstream)
 
   add_executable(thread thread.cpp)
-  target_link_libraries(thread OME::Common ${THREAD_LIBRARY})
+  target_link_libraries(thread OME::Common Threads::Threads)
   target_link_libraries(thread OME::Test)
 
   ome_add_test(ome-common/thread thread)
