Revert "common: Drop non-Boost logging support"
This reverts commit 991cd2630e5f912cc1b0088a1019e6edf6bbbf92.

--- a/lib/ome/common/CMakeLists.txt
+++ b/lib/ome/common/CMakeLists.txt
@@ -128,12 +128,17 @@ target_include_directories(ome-common PUBLIC
                            $<BUILD_INTERFACE:${LibDl_INCLUDE_DIRS}>
                            $<INSTALL_INTERFACE:${CMAKE_INSTALL_INCLUDEDIR}>)
 
+if(OME_HAVE_BOOST_LOG)
+  set(log_libraries
+      Boost::log_setup
+      Boost::log)
+endif()
+
 target_link_libraries(ome-common
                       PUBLIC
                       Threads::Threads
                       OME::Compat
-                      Boost::log_setup
-                      Boost::log
+                      ${log_libraries}
                       Boost::iostreams
                       Boost::filesystem
                       Boost::system
