--- a/lib/ome/common/config.h.in
+++ b/lib/ome/common/config.h.in
@@ -45,6 +45,9 @@
 #cmakedefine OME_HAVE_TR1_REGEX 1
 #cmakedefine OME_HAVE_BOOST_REGEX 1
 #cmakedefine OME_HAVE_BOOST_LOG 1
+#cmakedefine OME_HAVE_BOOST_FILESYSTEM_ABSOLUTE 1
+#cmakedefine OME_HAVE_BOOST_FILESYSTEM_CANONICAL 1
+#cmakedefine OME_HAVE_BOOST_GEOMETRY_INDEX_RTREE_HPP 1
 #cmakedefine OME_HAVE_SNPRINTF 1
 #cmakedefine OME_VARIANT_LIMIT 1
 #cmakedefine OME_HAVE_DLADDR 1
